# xLight

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Readme.md
dependencies/: CMakeLists.txt
dependencies/imgui/: CMakeLists.txt
dependencies/tinyformat/: tinyformat.h
src/core/: core.h
src/core/accelerate/: accel.cpp  accel.h  octree.cpp  octree.h
src/core/file/: figure.cpp  figure.h  image.cpp  image.h
src/core/geometry/: bbox.h  common.h  frame.h  geometry.h  normal.h  point.h  ray.h  vector.h
src/core/math/: common.h  discretepdf.h  distribution.h  mat4.h  math.h  ndf.h  warp.h
src/core/mesh/: mesh.cpp  mesh.h  meshLoader.cpp  meshLoader.h  meshSet.cpp  meshSet.h
src/core/render-core/: bsdf.cpp  bsdf.h  bssrdf.h  camera.h  denoiser.h  emitter.h  film.h  filter.h  hetergeneous.h  info.cpp  info.h  integrator.h  material.h  medium.cpp  medium.h  phase.h  renderCore.h  sampler.cpp  sampler.h  scene.cpp  scene.h  spectrum.h  texture.cpp  texture.h
src/core/scene/: scene.cpp  scene.h
src/core/shape/: gridmedium.cpp  gridmedium.h  mesh.cpp  mesh.h  shape.h
src/core/task/: task.cpp  task.h
src/core/utils/: configurable.cpp  configurable.h  factory.cpp  factory.h  taskparser.cpp  taskparser.h
src/gui/: gui-demo.cpp
src/render/bsdf/: dielectric.cpp  diffuse.cpp  disney.cpp  empty.cpp  microfacet.cpp  mirror.cpp  ndf.h  plastic.cpp  roughdielectric.cpp
src/render/bssrdf/: seperate.cpp
src/render/camera/: perspective.cpp  thinlens.cpp
src/render/emitter/: area.cpp  environment.cpp  spot.cpp
src/render/filter/: filter.cpp
src/render/integrator/: ao.cpp  ao.h  bidirpathtracer.cpp  bruteforce.cpp  deep.cpp  integrator.cpp  integrator.h  lighttracer.cpp  normal.cpp  path.cpp  pathtracer.cpp  simple.cpp  simple.h  trvisual.cpp  volpathtracer.cpp  vpath.cpp  whitted.cpp
src/render/medium/: beerslaw.cpp  hetergeneous.cpp  homogeneous.cpp  pathsampler.h  phase.cpp
src/render/sampler/: independent.cpp  independent.h  stratified.cpp
src/render/texture/: bitmap.cpp  checkboard.cpp  constant.cpp  mipmap.cpp  mipmap.h
src/test/: demo  demo.cpp  test.cpp
